--- a/Java-Projects/TestSpringMVCHibernateProject/pom.xml
+++ b/Java-Projects/TestSpringMVCHibernateProject/pom.xml
@@ -16,9 +16,19 @@
   
   <dependencies>
     <dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+	    <version>2.6</version>
+    </dependency>
+    <dependency>
 	    <groupId>com.mchange</groupId>
 	    <artifactId>c3p0</artifactId>
 	    <version>0.9.5</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>3.1.2.RELEASE</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
